# SPDX-FileCopyrightText: Silicon Laboratories Inc. <https://www.silabs.com/>
#
# SPDX-License-Identifier: BSD-3-Clause

add_subdirectory(zwave_soc_door_lock_keypad)
add_subdirectory(zwave_soc_led_bulb)
add_subdirectory(zwave_soc_multilevel_sensor)
add_subdirectory(zwave_soc_power_strip)
add_subdirectory(zwave_soc_sensor_pir)
add_subdirectory(zwave_ncp_serial_api)
add_subdirectory(zwave_soc_switch_on_off)
add_subdirectory(zwave_soc_wall_controller)
