# SPDX-FileCopyrightText: Silicon Laboratories Inc. <https://www.silabs.com/>
#
# SPDX-License-Identifier: BSD-3-Clause

add_subdirectory(Assert)
add_subdirectory(CRC)
add_subdirectory(DebugPrint)
add_subdirectory(EventDistributor)
#add_subdirectory(Fifo)
#add_subdirectory(FsmEngine)
#add_subdirectory(QueueBlocking)
add_subdirectory(MfgTokens)
add_subdirectory(NodeMask)
add_subdirectory(QueueNotifying)
add_subdirectory(SyncEvent)
add_subdirectory(SwTimer)
add_subdirectory(Utils)
